[gd_scene load_steps=4 format=2]

[ext_resource path="res://resources/ui/items_hud.png" type="Texture" id=1]
[ext_resource path="res://resources/ui/icons/blink_dagger.png" type="Texture" id=2]
[ext_resource path="res://autoloads/HUD.gd" type="Script" id=3]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="Items" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -32.0
margin_top = -64.0
margin_right = 32.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Item" type="TextureButton" parent="Items"]
margin_right = 32.0
margin_bottom = 32.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Items" to="." method="_on_Items_mouse_entered"]
[connection signal="mouse_exited" from="Items" to="." method="_on_Items_mouse_exited"]
[connection signal="mouse_entered" from="Items/Item" to="." method="_on_Item_mouse_entered"]
[connection signal="mouse_exited" from="Items/Item" to="." method="_on_Item_mouse_exited"]
[connection signal="pressed" from="Items/Item" to="." method="_on_Item_pressed"]
